- Added branching collector that merges the result of five downstream collectors - Added intersectingBy collector that checks in a Stream of collections which elements occur in all collections in the stream - Added DoubleStatistics and BigDecimalStatistics classes to provide collectors that return those classes. These classes also contain the standard deviation of a data set of doubles or BigDecimals - Added MyObjects class to check nonnull on multiple objects - Added MyCollections to have a method which checks for an intersection in a Collection of Collections - Added QuintTuple to collect the result of a branching collector to five.